--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Build with Gatsby
         env:
           PREFIX_PATHS: 'true'
-        run: ${{ steps.detect-package-manager.outputs.manager }} run build
+        run: gatsby build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
